Dark Mode Shadow Issue Fixed

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -50,7 +50,6 @@ h1, h2,h3,h4 {
   color: #fff;
   padding: 5px 10px ;
   line-height: 1.7em;
-  box-shadow: 0 2px 10px 0 #cac9c9;
   text-align: center;
   user-select: none;
   cursor: pointer;
@@ -65,7 +64,6 @@ h6{
   color: #000;
   padding: 5px 10px ;
   line-height: 1.7em;
-  box-shadow: 0 2px 10px 0 #cac9c9;
   text-align: center;
   user-select: none;
   cursor: pointer;
